[tool.poetry]
name = "pythonproject21-2"
version = "0.1.0"
description = ""
authors = ["User <tooxa85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
isort = "^6.0.0"
black = "^25.1.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
